examples/promis/history/steps/telegram_bot/#test_results_result.txt
Error evaluating Problog model:
    cleanup, actions = node()  # Evaluate the node
                       ^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/eval_nodes.py", line 872, in __call__
    raise ArithmeticError(base_message, location)
problog.logic.ArithmeticError: Error while evaluating 'is'(X1,(49.873094-49.875)*meter_per_degree): Unknown function 'meter_per_degree'/0 at 8:88.Error evaluating Problog model:
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/MASTERTHESIS/#Expert_System_Design/examples/promis/promis_project/problog/problog/tasks/dcproblog/sdd_formula.py", line 39, in get_evaluator
    assert semiring
           ^^^^^^^^
AssertionErrorError evaluating Problog model:
    cleanup, actions = node()  # Evaluate the node
                       ^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/eval_nodes.py", line 872, in __call__
    raise ArithmeticError(base_message, location)
problog.logic.ArithmeticError: Error while evaluating 'is'(X1,(49.873094-49.875)*meter_per_degree): Unknown function 'meter_per_degree'/0 at 8:88.% Problog Inference Result：
relative_offset(-211.93753657979838,186.67530947625767) = 1.0000
user_location(49.875,8.65639) = 1.0000Error evaluating Problog model:
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/MASTERTHESIS/#Expert_System_Design/examples/promis/promis_project/problog/problog/tasks/dcproblog/sdd_formula.py", line 39, in get_evaluator
    assert semiring
           ^^^^^^^^
AssertionErrorError evaluating Problog model:
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/MASTERTHESIS/#Expert_System_Design/examples/promis/promis_project/problog/problog/tasks/dcproblog/sdd_formula.py", line 39, in get_evaluator
    assert semiring
           ^^^^^^^^
AssertionErrorError evaluating Problog model:
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/MASTERTHESIS/#Expert_System_Design/examples/promis/promis_project/problog/problog/tasks/dcproblog/sdd_formula.py", line 39, in get_evaluator
    assert semiring
           ^^^^^^^^
AssertionError% Problog Inference Result：
relative_offset(-211.93753657979838,186.67530947625767) = 1.0000
user_location(49.875,8.65639) = 1.0000% Problog Inference Result：
relative_offset(-211.93753657979838,186.67530947625767) = 1.0000
user_location(49.875,8.65639) = 1.0000% Problog Inference Result：
relative_offset(-211.93753657979838,186.67530947625764) = 1.0000
user_location(49.875,8.65639) = 1.0000% Problog Inference Result：
relative_offset(-211.93753657979838,186.67530947625764) = 1.0000
user_location(49.875,8.65639) = 1.0000% Problog Inference Result：
relative_offset(-211.93753657979838,186.67530947625764) = 1.0000
user_location(49.875,8.65639) = 1.0000% Problog Inference Result：
relative_offset(-5.559746500184565,216.41437029481477) = 1.0000
user_location(49.875,8.65639) = 1.0000